cmake_minimum_required(VERSION 3.30)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 17)

project(de_coder)
set(SOURCE_de_coder)
file(GLOB SOURCE_de_coder "src/*.cpp")
if(WIN32)
add_executable(de_coder ${SOURCE_de_coder})
elseif(UNIX)
add_executable(de_coder ${SOURCE_de_coder})
else()
message("Unknown platform")
endif()
target_include_directories(de_coder PRIVATE "./includes")