cmake_minimum_required(VERSION 3.30)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 17)

project(reallycoolnameimageformat_de_code)
set(SOURCE_reallycoolnameimageformat_de_code)
file(GLOB SOURCE_reallycoolnameimageformat_de_code "src/*.cpp")
if(WIN32)
add_executable(reallycoolnameimageformat_de_code ${SOURCE_reallycoolnameimageformat_de_code})
elseif(UNIX)
add_executable(reallycoolnameimageformat_de_code ${SOURCE_reallycoolnameimageformat_de_code})
else()
message("Unknown platform")
endif()
target_include_directories(reallycoolnameimageformat_de_code PRIVATE "./includes")